tests/ui/imports/glob-conflict-cross-crate-2.stderr
error[E0659]: `C` is ambiguous
  --> $DIR/glob-conflict-cross-crate-2.rs:8:13
   |
LL |     let _a: C = 1;
   |             ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `C` could refer to the type alias defined here
  --> $DIR/auxiliary/glob-conflict-cross-crate-2-extern.rs:9:9
   |
LL | pub use a::*;
   |         ^
note: `C` could also refer to the type alias defined here
  --> $DIR/auxiliary/glob-conflict-cross-crate-2-extern.rs:10:9
   |
LL | pub use b::*;
   |         ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
